--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,13 +1,17 @@
 spring:
-  config:
-    activate:
-      on-profile: local
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/monitoring
+    url: jdbc:mariadb://192.168.2.61:3306/monitoring
     username: park
     password: gupark
   thymeleaf:
     cache: false
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
+
+management:
+  endpoints:
+    web:
+      base-path: /management
+      exposure:
+        include: health, info, metrics
