Serverinfo, disk 컨트롤러 작성 테스트용 화면, onclick 출력 확인

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
       enabled: true
     restart:
       enabled: true
+  sql:
+    init:
+      encoding:
 server:
   error:
     whitelabel:
