--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.2.61:3306/test_monitoring
+    url: jdbc:mariadb://192.168.2.61:3306/monitoring
     username: park
     password: gupark
   thymeleaf:
