--- a/src/main/monitoring-front/package.json
+++ b/src/main/monitoring-front/package.json
@@ -2,15 +2,17 @@
   "name": "monitoring-front",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.3",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
