--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: monitoring
   profiles:
-    active: dev
+    active: local
   devtools:
     livereload:
       enabled: true
