차트 갱신시 메뉴, 차트 업데이트 차트, 서버 정보 갱신 시간 동기화, 캘린더 추가, 캘린더 날짜 선택시 해당 날짜 로그, 없는 날짜 선택시 빈 로그

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: monitoring
   profiles:
-    active: local
+    active: dev
   devtools:
     livereload:
       enabled: true
@@ -16,6 +16,8 @@ spring:
       include-message: never
 
   mvc:
+    favicon:
+      enabled=false:
     pathmatch:
       matching-strategy: ant_path_matcher
 
