날짜 변경 후 갱신시, 이전날짜 + 전날 23:55 ~ 00:05 가지고 오는 문제 수정, 서버 정보, 히스토리 메뉴, 서버 로그 작동시 polling 타이밍 동일하게

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,6 @@ springdoc:
     enabled: true
     path: /api-docs
   version: 1.0.0
-
 server:
-  error:
-    path: /errorPage
+    whitelabel:
+      enabled: false
